Completed project Weather App

--- a/0.1-weatherapp/index.html
+++ b/0.1-weatherapp/index.html
@@ -12,6 +12,9 @@
         <input type="text" placeholder="enter city name" spellcheck="false">
         <button><img src="images/search.png" alt=""></button>
     </div>
+    <div class="error">
+        <p>Invalid City Name</p>
+    </div>
     <div class="weather">
         <img src="images/rain.png" class="weatherIcon">
         <h1 class="temp">22°c</h1>
@@ -34,6 +37,69 @@
         </div>
     </div>
 </div>
+
+<script>
+
+const apiKey = "ae2c56e123b53b1ee66c14caaa167489";
+const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=";
+
+const searchBox = document.querySelector(".search input");
+const searchBtn = document.querySelector(".search button");
+const weatherIcon = document.querySelector(".weatherIcon");
+
+
+async function checkWeather(city){
+    const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+    
+    if(response.status == 404){
+        document.querySelector(".error").style.display = "block";
+        document.querySelector(".weather").style.display = "none";
+        }else{
+
+        let data = await response.json();
+
+        document.querySelector(".city").innerHTML = data.name;
+
+        let celsiusTemp = data.main.temp;
+        let fahrenheitTemp = (celsiusTemp * 9/5) + 32;
+        document.querySelector(".temp").innerHTML = Math.round(fahrenheitTemp) + "°F";
+
+        document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+
+        let kmPerHour = data.wind.speed;
+        let milesPerHour = kmPerHour * 0.621371;
+        document.querySelector(".wind").innerHTML = milesPerHour.toFixed(0) + " mph";
+
+        if(data.weather[0].main == "Clouds") {
+            weatherIcon.src = "images/clouds.png";
+        }
+        else if(data.weather[0].main == "Clear") {
+            weatherIcon.src = "images/clear.png";
+        }
+        else if(data.weather[0].main == "Rain") {
+            weatherIcon.src = "images/rain.png";
+        }
+        else if(data.weather[0].main == "Drizzle") {
+            weatherIcon.src = "images/drizzle.png";
+        }
+        else if(data.weather[0].main == "Mist") {
+            weatherIcon.src = "images/mist.png";
+        }   
+
+    document.querySelector(".weather").style.display = "block";
+    document.querySelector(".error").style.display = "none";
+    }
+}
+
+searchBtn.addEventListener("click", ()=>{
+    checkWeather(searchBox.value);
+})
+
+
+
+</script>
+
+
 
 </body>
 </html>
